--- a/.woodpecker/deploy-latest-bot.yml
+++ b/.woodpecker/deploy-latest-bot.yml
@@ -21,7 +21,7 @@ steps:
       - chmod +x helpers/fetch_creds_op.sh
       - ./helpers/fetch_creds_op.sh
 
-  - name: Install go and project deps and build latest binary and deploy
+  - name: Install go, project deps, build latest binary and deploy
     when:
       - event: push
         branch: main
@@ -55,7 +55,6 @@ steps:
       - go build -o /tmp/cox-bin/cox-event-listener src/main.go
 
       # Run playbook
-      - ls /tmp/cox-bin/
       - |
         ansible-playbook -i ansible/inventory/hosts.ini \
           ansible/playbooks/deploy.yml \
